<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="with_friends">With Friends</string>
    <string name="local_coop">Local Coop</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="singleplayer">SinglePlayer</string>
    <string name="settings">Settings</string>
    <string name="connect_via">Connect via :</string>
    <string name="versus">VS</string>


</resources>
